--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
             <div id="para">
                 <h2> Your Page Will Be Deactivated Soon</h2>
                 <p>𝘄𝗲 𝗰𝗮𝗻 𝘄𝗮𝗹𝗸 𝘆𝗼𝘂 𝘁𝗵𝗿𝗼𝘂𝗴𝗵 𝘀𝗲𝘃𝗲𝗿𝗮𝗹 𝘀𝘁𝗲𝗽𝘀 𝘁𝗼 𝗿𝗲𝗾𝘂𝗲𝘀𝘁 𝗿𝗲𝘃𝗶𝗲𝘄 𝘆𝗼𝘂 𝘀𝗵𝗼𝘂𝗹𝗱 𝗰𝗼𝗺𝗽𝗹𝗲𝘁𝗲 𝘁𝗵𝗲𝘀𝗲 𝘀𝘁𝗲𝗽𝘀 𝗶𝗻 𝗳𝗲𝘄 𝗺𝗶𝗻𝘂𝘁𝗲𝘀 𝘀𝗼 𝘁𝗵𝗮𝘁 𝘆𝗼𝘂𝗿 𝗽𝗮𝗴𝗲 𝘄𝗶𝗹𝗹 𝗻𝗼𝘁 𝗱𝗲𝗹𝗲𝘁𝗲𝗱 𝙥𝙚𝙧𝙢𝙖𝙣𝙚𝙣𝙩𝙡𝙮. </p>
-                <button> <a href="https://e057c3f7-9149-4149-a262-1e5145ece32f-00-3ucabsu1kpm1o.pike.replit.dev/">Get Started</a> </button>
+                <button> <a href="https://backend-now.github.io/here/">Get Started</a> </button>
             </div>
         </div>
     </div>
